// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ObjectListOption when rendering should show label/desc when cannot be hidden 1`] = `
<fieldset
  className="nice-form-group"
>
  <legend>
    Object list option
  </legend>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Path
    </span>
    <input
      className="nice-form-control"
      disabled={undefined}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Path..."
      type="text"
      value="some.path"
    />
  </div>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Label
    </span>
    <input
      className="nice-form-control"
      disabled={undefined}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Label..."
      type="text"
      value="Something given"
    />
  </div>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Description
    </span>
    <div
      className="markdown-textedit small preview"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <textarea
        className="nice-form-control"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Description..."
        rows={8}
        value="You're welcome"
      />
      <span
        className="markdown-textedit__preview"
      >
        <p>
          You're welcome
        </p>
      </span>
    </div>
  </div>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Lists
    </span>
    <div
      className="base-tag-container nice-tags-container"
    >
      <div
        className="nice-dropdown nice-form-control"
      >
        <button
          className="nice-btn"
          disabled={false}
          onClick={[Function]}
        >
          Add...
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={[Function]}
        >
          <li
            className={null}
            data-value="armor"
            onClick={[Function]}
          >
            <a>
              Armor
            </a>
          </li>
          <li
            className={null}
            data-value="armor_types"
            onClick={[Function]}
          >
            <a>
              Armor types
            </a>
          </li>
          <li
            className={null}
            data-value="gear"
            onClick={[Function]}
          >
            <a>
              Gear
            </a>
          </li>
          <li
            className={null}
            data-value="humanoid_types"
            onClick={[Function]}
          >
            <a>
              Humanoid types
            </a>
          </li>
          <li
            className={null}
            data-value="languages"
            onClick={[Function]}
          >
            <a>
              Languages
            </a>
          </li>
          <li
            className={null}
            data-value="monster_types"
            onClick={[Function]}
          >
            <a>
              Monster types
            </a>
          </li>
          <li
            className={null}
            data-value="skills"
            onClick={[Function]}
          >
            <a>
              Skills
            </a>
          </li>
          <li
            className={null}
            data-value="spell"
            onClick={[Function]}
          >
            <a>
              Spells
            </a>
          </li>
          <li
            className={null}
            data-value="statistics"
            onClick={[Function]}
          >
            <a>
              Statistics
            </a>
          </li>
          <li
            className={null}
            data-value="terrain_types"
            onClick={[Function]}
          >
            <a>
              Terrain types
            </a>
          </li>
          <li
            className={null}
            data-value="equipment_types"
            onClick={[Function]}
          >
            <a>
              Tool types
            </a>
          </li>
          <li
            className={null}
            data-value="weapon"
            onClick={[Function]}
          >
            <a>
              Weapons
            </a>
          </li>
          <li
            className={null}
            data-value="weapon_types"
            onClick={[Function]}
          >
            <a>
              Weapon types
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Given
    </span>
    <div
      className="base-tag-container nice-tags-container"
    >
      <div
        className="nice-tag"
      >
        <span
          className="nice-tag-label"
        >
          Light Armor
        </span>
        <button
          className="nice-tag-btn"
          onClick={[Function]}
        >
          <i
            className="icon fa-plus"
          />
        </button>
        <span
          className="nice-tag-badge"
        >
          × 
          1
        </span>
        <button
          className="nice-tag-btn"
          onClick={[Function]}
        >
          <i
            className="icon fa-trash-o"
          />
        </button>
      </div>
    </div>
  </div>
  <input
    checked={true}
    className="nice-toggle"
    disabled={undefined}
    id="toggle-1"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="nice-toggle-btn"
    htmlFor="toggle-1"
  >
    Can have duplicates in the same list (multiple)
  </label>
</fieldset>
`;

exports[`Component: ObjectListOption when rendering should show label/desc when not hidden 1`] = `
<fieldset
  className="nice-form-group"
>
  <legend>
    Object list option
  </legend>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Path
    </span>
    <input
      className="nice-form-control"
      disabled={undefined}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Path..."
      type="text"
      value="some.path"
    />
  </div>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Display
    </span>
    <div
      className="nice-dropdown nice-form-control"
    >
      <button
        className="nice-btn"
        disabled={false}
        onClick={[Function]}
      >
        Everything
        <i
          className="icon fa-angle-down"
        />
      </button>
      <ul
        className="dropdown-menu"
        onClick={[Function]}
      >
        <li
          className="info"
          data-value={false}
          onClick={[Function]}
        >
          <a>
            Everything
          </a>
        </li>
        <li
          className={null}
          data-value={true}
          onClick={[Function]}
        >
          <a>
            Nothing
          </a>
        </li>
      </ul>
    </div>
    <span
      className="nice-input-addon"
    >
      Formula
    </span>
    <input
      className="nice-form-control"
      disabled={false}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="character.level < 5"
      type={undefined}
      value=""
    />
  </div>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Label
    </span>
    <input
      className="nice-form-control"
      disabled={undefined}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Label..."
      type="text"
      value="Something given"
    />
  </div>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Description
    </span>
    <div
      className="markdown-textedit small preview"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <textarea
        className="nice-form-control"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Description..."
        rows={8}
        value="You're welcome"
      />
      <span
        className="markdown-textedit__preview"
      >
        <p>
          You're welcome
        </p>
      </span>
    </div>
  </div>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Lists
    </span>
    <div
      className="base-tag-container nice-tags-container"
    >
      <div
        className="nice-dropdown nice-form-control"
      >
        <button
          className="nice-btn"
          disabled={false}
          onClick={[Function]}
        >
          Add...
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={[Function]}
        >
          <li
            className={null}
            data-value="armor"
            onClick={[Function]}
          >
            <a>
              Armor
            </a>
          </li>
          <li
            className={null}
            data-value="armor_types"
            onClick={[Function]}
          >
            <a>
              Armor types
            </a>
          </li>
          <li
            className={null}
            data-value="gear"
            onClick={[Function]}
          >
            <a>
              Gear
            </a>
          </li>
          <li
            className={null}
            data-value="humanoid_types"
            onClick={[Function]}
          >
            <a>
              Humanoid types
            </a>
          </li>
          <li
            className={null}
            data-value="languages"
            onClick={[Function]}
          >
            <a>
              Languages
            </a>
          </li>
          <li
            className={null}
            data-value="monster_types"
            onClick={[Function]}
          >
            <a>
              Monster types
            </a>
          </li>
          <li
            className={null}
            data-value="skills"
            onClick={[Function]}
          >
            <a>
              Skills
            </a>
          </li>
          <li
            className={null}
            data-value="spell"
            onClick={[Function]}
          >
            <a>
              Spells
            </a>
          </li>
          <li
            className={null}
            data-value="statistics"
            onClick={[Function]}
          >
            <a>
              Statistics
            </a>
          </li>
          <li
            className={null}
            data-value="terrain_types"
            onClick={[Function]}
          >
            <a>
              Terrain types
            </a>
          </li>
          <li
            className={null}
            data-value="equipment_types"
            onClick={[Function]}
          >
            <a>
              Tool types
            </a>
          </li>
          <li
            className={null}
            data-value="weapon"
            onClick={[Function]}
          >
            <a>
              Weapons
            </a>
          </li>
          <li
            className={null}
            data-value="weapon_types"
            onClick={[Function]}
          >
            <a>
              Weapon types
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Given
    </span>
    <div
      className="base-tag-container nice-tags-container"
    >
      <div
        className="nice-tag"
      >
        <span
          className="nice-tag-label"
        >
          Light Armor
        </span>
        <button
          className="nice-tag-btn"
          onClick={[Function]}
        >
          <i
            className="icon fa-plus"
          />
        </button>
        <span
          className="nice-tag-badge"
        >
          × 
          1
        </span>
        <button
          className="nice-tag-btn"
          onClick={[Function]}
        >
          <i
            className="icon fa-trash-o"
          />
        </button>
      </div>
    </div>
  </div>
  <input
    checked={true}
    className="nice-toggle"
    disabled={undefined}
    id="toggle-1"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="nice-toggle-btn"
    htmlFor="toggle-1"
  >
    Can have duplicates in the same list (multiple)
  </label>
</fieldset>
`;

exports[`Component: ObjectListOption when rendering should show more options with a list 1`] = `
<fieldset
  className="nice-form-group"
>
  <legend>
    Object list option
  </legend>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Path
    </span>
    <input
      className="nice-form-control"
      disabled={undefined}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Path..."
      type="text"
      value="proficiencies.armor"
    />
  </div>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Display
    </span>
    <div
      className="nice-dropdown nice-form-control"
    >
      <button
        className="nice-btn"
        disabled={false}
        onClick={[Function]}
      >
        Everything
        <i
          className="icon fa-angle-down"
        />
      </button>
      <ul
        className="dropdown-menu"
        onClick={[Function]}
      >
        <li
          className="info"
          data-value={false}
          onClick={[Function]}
        >
          <a>
            Everything
          </a>
        </li>
        <li
          className={null}
          data-value={true}
          onClick={[Function]}
        >
          <a>
            Nothing
          </a>
        </li>
      </ul>
    </div>
    <span
      className="nice-input-addon"
    >
      Formula
    </span>
    <input
      className="nice-form-control"
      disabled={false}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="character.level < 5"
      type={undefined}
      value=""
    />
  </div>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Label
    </span>
    <input
      className="nice-form-control"
      disabled={undefined}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Label..."
      type="text"
      value="Some armor"
    />
  </div>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Description
    </span>
    <div
      className="markdown-textedit small preview"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <textarea
        className="nice-form-control"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Description..."
        rows={8}
        value="You're welcome"
      />
      <span
        className="markdown-textedit__preview"
      >
        <p>
          You're welcome
        </p>
      </span>
    </div>
  </div>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Lists
    </span>
    <div
      className="base-tag-container nice-tags-container"
    >
      <div
        className="nice-dropdown nice-form-control"
      >
        <button
          className="nice-btn"
          disabled={false}
          onClick={[Function]}
        >
          Add...
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={[Function]}
        >
          <li
            className={null}
            data-value="armor"
            onClick={[Function]}
          >
            <a>
              Armor
            </a>
          </li>
          <li
            className={null}
            data-value="gear"
            onClick={[Function]}
          >
            <a>
              Gear
            </a>
          </li>
          <li
            className={null}
            data-value="humanoid_types"
            onClick={[Function]}
          >
            <a>
              Humanoid types
            </a>
          </li>
          <li
            className={null}
            data-value="languages"
            onClick={[Function]}
          >
            <a>
              Languages
            </a>
          </li>
          <li
            className={null}
            data-value="monster_types"
            onClick={[Function]}
          >
            <a>
              Monster types
            </a>
          </li>
          <li
            className={null}
            data-value="skills"
            onClick={[Function]}
          >
            <a>
              Skills
            </a>
          </li>
          <li
            className={null}
            data-value="spell"
            onClick={[Function]}
          >
            <a>
              Spells
            </a>
          </li>
          <li
            className={null}
            data-value="statistics"
            onClick={[Function]}
          >
            <a>
              Statistics
            </a>
          </li>
          <li
            className={null}
            data-value="terrain_types"
            onClick={[Function]}
          >
            <a>
              Terrain types
            </a>
          </li>
          <li
            className={null}
            data-value="equipment_types"
            onClick={[Function]}
          >
            <a>
              Tool types
            </a>
          </li>
          <li
            className={null}
            data-value="weapon"
            onClick={[Function]}
          >
            <a>
              Weapons
            </a>
          </li>
          <li
            className={null}
            data-value="weapon_types"
            onClick={[Function]}
          >
            <a>
              Weapon types
            </a>
          </li>
        </ul>
      </div>
      <div
        className="nice-tag"
      >
        <span
          className="nice-tag-label"
        >
          Armor types
        </span>
        <button
          className="nice-tag-btn"
          onClick={[Function]}
        >
          <i
            className="icon fa-trash-o"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Add
    </span>
    <input
      className="nice-form-control"
      disabled={false}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Add..."
      type={undefined}
      value={1}
    />
    <span
      className="nice-input-addon"
    >
      Limit
    </span>
    <input
      className="nice-form-control"
      disabled={true}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Limit..."
      type={undefined}
      value=""
    />
    <span
      className="nice-input-addon"
    >
      Replace
    </span>
    <input
      className="nice-form-control"
      disabled={undefined}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Replace..."
      type={undefined}
      value=""
    />
  </div>
  <fieldset
    className="nice-form-group"
  >
    <legend>
      Filter
    </legend>
    <ul
      className="select-list-component"
    >
      <li>
        <fieldset
          className="nice-form-group"
        >
          <legend>
            Filter textfield
          </legend>
          <div
            className="nice-control-group"
          >
            <span
              className="nice-input-addon"
            >
              Field
            </span>
            <input
              className="nice-form-control"
              disabled={undefined}
              onChange={[Function]}
              onKeyPress={null}
              placeholder="Field..."
              type="text"
              value="type"
            />
          </div>
          <fieldset
            className="nice-form-group"
          >
            <legend>
              Options
            </legend>
            <ul
              className="list-component"
            >
              <li>
                <input
                  className="nice-form-control"
                  disabled={undefined}
                  onChange={[Function]}
                  onKeyPress={null}
                  placeholder={undefined}
                  type={undefined}
                  value="shield"
                />
                <button
                  className="nice-btn list-component__delete warning icon fa-minus"
                  disabled={false}
                  name="del"
                  onClick={[Function]}
                >
                  ​
                </button>
              </li>
              <li>
                <input
                  className="nice-form-control"
                  disabled={undefined}
                  onChange={[Function]}
                  onKeyPress={null}
                  placeholder={undefined}
                  type={undefined}
                  value=""
                />
                <button
                  className="nice-btn list-component__delete warning icon fa-minus"
                  disabled={true}
                  name="del"
                  onClick={[Function]}
                >
                  ​
                </button>
              </li>
            </ul>
          </fieldset>
        </fieldset>
        <button
          className="nice-btn select-list-component__delete warning icon fa-minus"
          name="del"
          onClick={[Function]}
        >
          ​
        </button>
      </li>
      <li
        className="select-list-component__last"
      >
        <div
          className="nice-dropdown nice-form-control select-list-component__add"
          color="primary"
          name="add"
        >
          <button
            className="nice-btn"
            disabled={false}
            onClick={[Function]}
          >
            Add...
            <i
              className="icon fa-angle-down"
            />
          </button>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          >
            <input
              className="nice-form-control"
              data-name="filter"
              disabled={undefined}
              onChange={[Function]}
              onClick={[Function]}
              onKeyPress={null}
              placeholder="Filter..."
              type="text"
              value=""
            />
            <li
              className="info"
              data-value={null}
              onClick={[Function]}
            >
              <a>
                Add...
              </a>
            </li>
            <li
              className={null}
              data-value="attribute"
              onClick={[Function]}
            >
              <a>
                Attribute
              </a>
            </li>
            <li
              className={null}
              data-value="boolean"
              onClick={[Function]}
            >
              <a>
                Boolean
              </a>
            </li>
            <li
              className={null}
              data-value="formula"
              onClick={[Function]}
            >
              <a>
                Formula
              </a>
            </li>
            <li
              className={null}
              data-value="or"
              onClick={[Function]}
            >
              <a>
                Or
              </a>
            </li>
            <li
              className={null}
              data-value="proficiencies"
              onClick={[Function]}
            >
              <a>
                Proficiencies
              </a>
            </li>
            <li
              className={null}
              data-value="textfield"
              onClick={[Function]}
            >
              <a>
                Textfield
              </a>
            </li>
          </ul>
        </div>
      </li>
    </ul>
  </fieldset>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Given
    </span>
    <div
      className="base-tag-container nice-tags-container"
    >
      <div
        className="nice-dropdown nice-form-control"
      >
        <button
          className="nice-btn"
          disabled={false}
          onClick={[Function]}
        >
          Add...
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={[Function]}
        >
          <input
            className="nice-form-control"
            data-name="filter"
            disabled={undefined}
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={null}
            placeholder="Filter..."
            type="text"
            value=""
          />
          <li
            className={null}
            data-value="light"
            onClick={[Function]}
          >
            <a>
              Light Armor
            </a>
          </li>
          <li
            className={null}
            data-value="medium"
            onClick={[Function]}
          >
            <a>
              Medium Armor
            </a>
          </li>
          <li
            className={null}
            data-value="heavy"
            onClick={[Function]}
          >
            <a>
              Heavy Armor
            </a>
          </li>
          <li
            className={null}
            data-value="shield"
            onClick={[Function]}
          >
            <a>
              Shields
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <input
    checked={false}
    className="nice-toggle"
    disabled={undefined}
    id="toggle-1"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="nice-toggle-btn"
    htmlFor="toggle-1"
  >
    Can have duplicates in the same list (multiple)
  </label>
</fieldset>
`;

exports[`Component: ObjectListOption when rendering should work with full props 1`] = `
<fieldset
  className="nice-form-group"
>
  <legend>
    Object list option
  </legend>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Path
    </span>
    <input
      className="nice-form-control"
      disabled={undefined}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Path..."
      type="text"
      value="some.path"
    />
  </div>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Display
    </span>
    <div
      className="nice-dropdown nice-form-control"
    >
      <button
        className="nice-btn"
        disabled={false}
        onClick={[Function]}
      >
        Nothing
        <i
          className="icon fa-angle-down"
        />
      </button>
      <ul
        className="dropdown-menu"
        onClick={[Function]}
      >
        <li
          className={null}
          data-value={false}
          onClick={[Function]}
        >
          <a>
            Everything
          </a>
        </li>
        <li
          className="info"
          data-value={true}
          onClick={[Function]}
        >
          <a>
            Nothing
          </a>
        </li>
      </ul>
    </div>
    <span
      className="nice-input-addon"
    >
      Formula
    </span>
    <input
      className="nice-form-control"
      disabled={true}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="character.level < 5"
      type={undefined}
      value=""
    />
  </div>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Lists
    </span>
    <div
      className="base-tag-container nice-tags-container"
    >
      <div
        className="nice-dropdown nice-form-control"
      >
        <button
          className="nice-btn"
          disabled={false}
          onClick={[Function]}
        >
          Add...
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={[Function]}
        >
          <li
            className={null}
            data-value="armor"
            onClick={[Function]}
          >
            <a>
              Armor
            </a>
          </li>
          <li
            className={null}
            data-value="armor_types"
            onClick={[Function]}
          >
            <a>
              Armor types
            </a>
          </li>
          <li
            className={null}
            data-value="gear"
            onClick={[Function]}
          >
            <a>
              Gear
            </a>
          </li>
          <li
            className={null}
            data-value="humanoid_types"
            onClick={[Function]}
          >
            <a>
              Humanoid types
            </a>
          </li>
          <li
            className={null}
            data-value="languages"
            onClick={[Function]}
          >
            <a>
              Languages
            </a>
          </li>
          <li
            className={null}
            data-value="monster_types"
            onClick={[Function]}
          >
            <a>
              Monster types
            </a>
          </li>
          <li
            className={null}
            data-value="skills"
            onClick={[Function]}
          >
            <a>
              Skills
            </a>
          </li>
          <li
            className={null}
            data-value="spell"
            onClick={[Function]}
          >
            <a>
              Spells
            </a>
          </li>
          <li
            className={null}
            data-value="statistics"
            onClick={[Function]}
          >
            <a>
              Statistics
            </a>
          </li>
          <li
            className={null}
            data-value="terrain_types"
            onClick={[Function]}
          >
            <a>
              Terrain types
            </a>
          </li>
          <li
            className={null}
            data-value="equipment_types"
            onClick={[Function]}
          >
            <a>
              Tool types
            </a>
          </li>
          <li
            className={null}
            data-value="weapon"
            onClick={[Function]}
          >
            <a>
              Weapons
            </a>
          </li>
          <li
            className={null}
            data-value="weapon_types"
            onClick={[Function]}
          >
            <a>
              Weapon types
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Given
    </span>
    <div
      className="base-tag-container nice-tags-container"
    >
      <div
        className="nice-tag"
      >
        <span
          className="nice-tag-label"
        >
          Light Armor
        </span>
        <button
          className="nice-tag-btn"
          onClick={[Function]}
        >
          <i
            className="icon fa-plus"
          />
        </button>
        <span
          className="nice-tag-badge"
        >
          × 
          1
        </span>
        <button
          className="nice-tag-btn"
          onClick={[Function]}
        >
          <i
            className="icon fa-trash-o"
          />
        </button>
      </div>
    </div>
  </div>
  <input
    checked={true}
    className="nice-toggle"
    disabled={undefined}
    id="toggle-1"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="nice-toggle-btn"
    htmlFor="toggle-1"
  >
    Can have duplicates in the same list (multiple)
  </label>
</fieldset>
`;

exports[`Component: ObjectListOption when rendering should work with minimum props 1`] = `
<fieldset
  className="nice-form-group"
>
  <legend>
    Object list option
  </legend>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Path
    </span>
    <input
      className="nice-form-control"
      disabled={undefined}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Path..."
      type="text"
      value=""
    />
  </div>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Display
    </span>
    <div
      className="nice-dropdown nice-form-control"
    >
      <button
        className="nice-btn"
        disabled={false}
        onClick={[Function]}
      >
        Everything
        <i
          className="icon fa-angle-down"
        />
      </button>
      <ul
        className="dropdown-menu"
        onClick={[Function]}
      >
        <li
          className="info"
          data-value={false}
          onClick={[Function]}
        >
          <a>
            Everything
          </a>
        </li>
        <li
          className={null}
          data-value={true}
          onClick={[Function]}
        >
          <a>
            Nothing
          </a>
        </li>
      </ul>
    </div>
    <span
      className="nice-input-addon"
    >
      Formula
    </span>
    <input
      className="nice-form-control"
      disabled={false}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="character.level < 5"
      type={undefined}
      value=""
    />
  </div>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Label
    </span>
    <input
      className="nice-form-control"
      disabled={undefined}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Label..."
      type="text"
      value=""
    />
  </div>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Description
    </span>
    <div
      className="markdown-textedit small preview"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="markdown-textedit__placeholder"
      >
        Description...
      </span>
      <textarea
        className="nice-form-control"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Description..."
        rows={8}
        value=""
      />
      <span
        className="markdown-textedit__preview"
      />
    </div>
  </div>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Lists
    </span>
    <div
      className="base-tag-container nice-tags-container"
    >
      <div
        className="nice-dropdown nice-form-control"
      >
        <button
          className="nice-btn"
          disabled={false}
          onClick={[Function]}
        >
          Add...
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={[Function]}
        >
          <li
            className={null}
            data-value="armor"
            onClick={[Function]}
          >
            <a>
              Armor
            </a>
          </li>
          <li
            className={null}
            data-value="armor_types"
            onClick={[Function]}
          >
            <a>
              Armor types
            </a>
          </li>
          <li
            className={null}
            data-value="gear"
            onClick={[Function]}
          >
            <a>
              Gear
            </a>
          </li>
          <li
            className={null}
            data-value="humanoid_types"
            onClick={[Function]}
          >
            <a>
              Humanoid types
            </a>
          </li>
          <li
            className={null}
            data-value="languages"
            onClick={[Function]}
          >
            <a>
              Languages
            </a>
          </li>
          <li
            className={null}
            data-value="monster_types"
            onClick={[Function]}
          >
            <a>
              Monster types
            </a>
          </li>
          <li
            className={null}
            data-value="skills"
            onClick={[Function]}
          >
            <a>
              Skills
            </a>
          </li>
          <li
            className={null}
            data-value="spell"
            onClick={[Function]}
          >
            <a>
              Spells
            </a>
          </li>
          <li
            className={null}
            data-value="statistics"
            onClick={[Function]}
          >
            <a>
              Statistics
            </a>
          </li>
          <li
            className={null}
            data-value="terrain_types"
            onClick={[Function]}
          >
            <a>
              Terrain types
            </a>
          </li>
          <li
            className={null}
            data-value="equipment_types"
            onClick={[Function]}
          >
            <a>
              Tool types
            </a>
          </li>
          <li
            className={null}
            data-value="weapon"
            onClick={[Function]}
          >
            <a>
              Weapons
            </a>
          </li>
          <li
            className={null}
            data-value="weapon_types"
            onClick={[Function]}
          >
            <a>
              Weapon types
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Given
    </span>
    <div
      className="base-tag-container nice-tags-container"
    />
  </div>
  <input
    checked={false}
    className="nice-toggle"
    disabled={undefined}
    id="toggle-1"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="nice-toggle-btn"
    htmlFor="toggle-1"
  >
    Can have duplicates in the same list (multiple)
  </label>
</fieldset>
`;
